Added Characters
